# Document

./: CLAUDE.md  CMakeLists.txt  README.md  document.code-workspace  test.txt
cmake/compiler/: msvc.cmake
code/: CMakeLists.txt
code/document/: CMakeLists.txt  document.cpp  document.h  encoding.cpp  encoding.h  position.h  range.h  type.h
code/example/: CMakeLists.txt  main.cpp
